# JC3248W535EN

./: CMakeLists.txt  JC3248W535EN.code-workspace  sdkconfig  sdkconfig.LVGL-320-480  sdkconfig.old
docs/JC3248W535EN/: Notes.one  Open Notebook.onetoc2
main/: CMakeLists.txt
src/: CMakeLists.txt  DEMO_LVGL.c  display_color_test.c  display_color_test.h
